--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "2.7"
   - "3.4"
+  - "3.5"
 env:
   - DJANGO_VERSION=1.8.*
   - DJANGO_VERSION=1.9.*
@@ -9,6 +10,7 @@ env:
   - DJANGO_VERSION=1.11a1
 install:
   - "pip install -r requirements.txt"
+  - "pip install -r requirements_test.txt"
   - "pip install Django==$DJANGO_VERSION"
 script: "python src/runtests.py"
 sudo: false
